Practiced CSS positioning

--- a/position.html
+++ b/position.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Positioning</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="app.css" />
 </head>
+
 <body>
     <main>
-        <div class="box blue"></div>
+        <div class="box blue"> </div>
         <div class="box red border-yellow"></div>
         <div class="box green"></div>
-        <div class="box purple"></div>
+        <div class=" box purple " style="float: none; clear: both;" ></div>
     </main>
 </body>
+
 </html>
